<resources>
    <string name="app_name">RIJA</string>
    <string name="title_activity_login">Bejelentkezés</string>
    <string name="email">Ímél</string>
    <string name="password">Jelszó</string>
    <string name="sign_in">Bejelentkezés</string>
    <string name="invalid_username">Helytelen felhasználónév</string>
    <string name="invalid_password">A jelszó legalább 6 karakterből kell álljon!</string>
    <string name="login_failed">"Sikertelen bejelentkezés"</string>
    <string name="register_instead">Vagy inkább regisztrálnál?</string>
    <string name="register">Regisztráció</string>
    <string name="username">Felhasználónév</string>
    <string name="confirm_password">Jelszó ismét</string>
    <string name="passwords_not_match">A jelszavak nem egyeznek.</string>
    <string name="register_failed">A regisztráció nem sikerül.</string>
    <string name="register_success">Sikeres regisztráció!</string>
    <string name="login_success">Sikeres bejelentkezés!</string>
    <string name="logout">Kijelentkezés</string>
    <string name="add_task">Feladat hozzáadása</string>
    <string name="title_activity_add_ticket">AddTicketActivity</string>
    <string name="title">Cím</string>
    <string name="description">Leírás</string>
    <string name="none">Ez a terület üres. :D</string>
</resources>